--- a/Cap.Web/Areas/Erp/Views/Caixa/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Caixa/Index.cshtml
@@ -25,19 +25,46 @@
             Pagável em:<br />
             @Html.SelectPgto(0, true)
         </div>
-        <div class="col-md-3 top20">
+        <div class="col-md-3 top20 text-right">
             <input type="button" value="Atualizar" id="atualizar" class="btn btn-primary" />
         </div>
     </div>
 }
-
-<div id="parcelas"></div>
 <div id="modal" class="modal"></div>
+<div id="parcelas" class="top40"></div>
+
+<div id="menucaixa" class="top20">
+    <input type="button" id="credito" value="Novo crédito" class="btn btn-primary" />
+    <input type="button" id="estcred" value="Estornar crédito" class="btn btn-primary" />
+    <input type="button" id="avista" value="Conta à vista" class="btn btn-primary" />
+    <input type="button" id="baixar" value="Baixar seleção" class="btn btn-primary" />
+    <input type="button" id="estornar" value="Estornar cheque" class="btn btn-primary" />
+    <input type="button" id="alterarcomp" value="Alterar compensação" class="btn btn-primary" />
+    <input type="button" id="trocar" value="Trocar cheque" class="btn btn-primary" />
+    <input type="button" id="lista" value="Lista bancária" class="btn btn-primary" />
+    <input type="button" id="transf" value="Transferência" class="btn btn-primary" />
+
+    <input type="hidden" id="idContaDefault" value="0" />
+</div>
 
 <script type="text/javascript">
 
+    $(document).ready(function () {
+        getParcelas();
+    });
+
     $('#atualizar').click(function () {
         getParcelas();
+    });
+
+    $('#baixar').click(function () {
+        var selecionados = getParcelasSelecionadas();
+        var idConta = $('#idContaDefault').val();
+        if (selecionados != null) {
+            $('#modal').load('/Erp/Caixa/BaixarParcelasSelecionadas/', new { 'selecionados': selecionados, 'idConta': idConta }, function () {
+                $('#modal').modal('show');
+            });
+        }
     });
 
     function getParcelas() {
@@ -55,5 +82,34 @@
             }
         });
     };
+
+    function getParcelasSelecionadas() {
+        var n = $('input:checked').length;
+        if (n == 0) {
+            $('#modal').load('/Erp/ModalInfo/Index/', { 'msg': 'Nenhuma parcela selecionada' });
+            $('#modal').modal('show');
+            return null;
+        } else {
+            var selecionados = new Array();
+            $('input:checked').each(function () {
+                selecionados.push($(this).val());
+            });
+            return selecionados;
+        }
+    }
+
+    function getValorSelecionado() {
+        var n = $('input:checked').length;
+        if (n == 0) {
+            return 0;
+        } else {
+            var total = 0;
+            $('input:checked').each(function () {
+                var valor = parseFloat($(this).attr('data-valor'));
+                total += valor;
+            });
+            return total;
+        }
+    }
 
 </script>
