--- a/Cap.Web/Areas/Erp/Views/Caixa/GetParcelas.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Caixa/GetParcelas.cshtml
@@ -73,7 +73,7 @@
                     </td>
                     <td>
                         <a href="#" data-id="@item.Id" title="Detalhes da parcela" class="details"><i class="glyphicon glyphicon-info-sign"></i></a>
-                        <a href="/Erp/Pedido/Edit/@item.Pedido.Id" title="Editar a parcela no pedido"><i class="glyphicon glyphicon-edit"</a>
+                        <a href="/Erp/Pedido/Edit/@item.Pedido.Id" title="Editar a parcela no pedido"><i class="glyphicon glyphicon-edit"></i></a>
                     </td>
                 </tr>
             }
