--- a/Cap.Web/Areas/Erp/Views/Parcela/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Parcela/Edit.cshtml
@@ -24,6 +24,13 @@
                     @Html.HiddenFor(model => model.AlteradoPor)
                     @Html.HiddenFor(model => model.CriadoEm)
                     @Html.HiddenFor(model => model.CriadoPor)
+                    @Html.HiddenFor(model => model.ContaId)
+                    @Html.HiddenFor(model => model.Cheque)
+                    @Html.HiddenFor(model => model.BaixadoEm)
+                    @Html.HiddenFor(model => model.BaixadoPor)
+                    @Html.HiddenFor(model => model.DataCaixa)
+                    @Html.HiddenFor(model => model.CompBanco)
+                    @Html.HiddenFor(model => model.CompBancoData)
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Vencto, htmlAttributes: new { @class = "control-label col-md-2" })
